<?xml version="1.0"?>
<package format="2">
  <name>ar_marker_laser_correction</name>
  <version>1.0.0</version>
  <description>AR marker orientation correction using laser scan data</description>
  
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ar_track_alvar_msgs</depend>
  <depend>laser_line_extraction</depend>
  <depend>visualization_msgs</depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
